[feat] update package

--- a/class-mission/mission2/package.json
+++ b/class-mission/mission2/package.json
@@ -1,5 +1,11 @@
 {
+  "scripts": {
+    "start": "nodemon server.ts"
+  },
   "dependencies": {
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   }
 }
