--- a/class-mission/mission5/package.json
+++ b/class-mission/mission5/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev": "nodemon ./bin/www",
+    "start:dev": "NODE_ENV=dev nodemon ./bin/www",
+    "start:prod": "NODE_ENV=prod nodemon ./bin/www",
     "swagger": "node ./swagger.js"
   },
   "dependencies": {
